yaml1/deployment_tomcat.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: tomcat-index
  annotations:
    kubernetes.io/change-cause: first_version
spec:
  replicas: 2
  selector:
    matchLabels:
      app: tomcat
      name: index
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxSurge: 25%
      maxUnavailable: 25%
  template:
    metadata:
      labels:
        app: tomcat
        name: index
    spec:
      topologySpreadConstraints:
        - maxSkew: 1
          topologyKey: kubernetes.io/hostname
          whenUnsatisfiable: ScheduleAnyway
          labelSelector:
            matchLabels:
              app: tomcat
      containers:
      - image: chae45/tomcat-index:v1.0
        name: tomcat-index-deploy
        ports:
        - containerPort: 8080
        volumeMounts:
        - mountPath: "/opt/tomcat/webapps/ROOT/data"
          name: html
        resources:
          limits:
            cpu: 200m
            memory: 250Mi
          requests:
            cpu: 200m
            memory: 250Mi
        livenessProbe:
          httpGet:
            path: /
            port: 8080
          initialDelaySeconds: 15
          periodSeconds: 20
          timeoutSeconds: 1
          successThreshold: 1
          failureThreshold: 3
      volumes:
        - name: html
          persistentVolumeClaim:
            claimName: pvc-tomcat
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: tomcat-login
  annotations:
    kubernetes.io/change-cause: first_version
spec:
  replicas: 2
  selector:
    matchLabels:
      app: tomcat
      name: login
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxSurge: 25%
      maxUnavailable: 25%
  template:
    metadata:
      labels:
        app: tomcat
        name: login
    spec:
      topologySpreadConstraints:
        - maxSkew: 1
          topologyKey: kubernetes.io/hostname
          whenUnsatisfiable: ScheduleAnyway
          labelSelector:
            matchLabels:
              app: tomcat
      containers:
      - image: chae45/tomcat-login:v1.0
        name: tomcat-login-deploy
        ports:
        - containerPort: 8080
        volumeMounts:
        - mountPath: "/opt/tomcat/webapps/ROOT/data"
          name: html
        resources:
          limits:
            cpu: 200m
            memory: 250Mi
          requests:
            cpu: 200m
            memory: 250Mi
        livenessProbe:
          httpGet:
            path: /
            port: 8080
          initialDelaySeconds: 15
          periodSeconds: 20
          timeoutSeconds: 1
          successThreshold: 1
          failureThreshold: 3
      volumes:
        - name: html
          persistentVolumeClaim:
            claimName: pvc-tomcat
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: tomcat-join
  annotations:
    kubernetes.io/change-cause: first_version
spec:
  replicas: 2
  selector:
    matchLabels:
      app: tomcat
      name: join
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxSurge: 25%
      maxUnavailable: 25%
  template:
    metadata:
      labels:
        app: tomcat
        name: join
    spec:
      topologySpreadConstraints:
        - maxSkew: 1
          topologyKey: kubernetes.io/hostname
          whenUnsatisfiable: ScheduleAnyway
          labelSelector:
            matchLabels:
              app: tomcat
      containers:
      - image: chae45/tomcat-join:v1.0
        name: tomcat-join-deploy
        ports:
        - containerPort: 8080
        volumeMounts:
        - mountPath: "/opt/tomcat/webapps/ROOT/data"
          name: html
        resources:
          limits:
            cpu: 200m
            memory: 250Mi
          requests:
            cpu: 200m
            memory: 250Mi
        livenessProbe:
          httpGet:
            path: /
            port: 8080
          initialDelaySeconds: 15
          periodSeconds: 20
          timeoutSeconds: 1
          successThreshold: 1
          failureThreshold: 3
      volumes:
        - name: html
          persistentVolumeClaim:
            claimName: pvc-tomcat

---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: tomcat-menu
  annotations:
    kubernetes.io/change-cause: first_version
spec:
  replicas: 2
  selector:
    matchLabels:
      app: tomcat
      name: menu
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxSurge: 25%
      maxUnavailable: 25%
  template:
    metadata:
      labels:
        app: tomcat
        name: menu
    spec:
      topologySpreadConstraints:
        - maxSkew: 1
          topologyKey: kubernetes.io/hostname
          whenUnsatisfiable: ScheduleAnyway
          labelSelector:
            matchLabels:
              app: tomcat
      containers:
      - image: chae45/tomcat-menu:v1.0
        name: tomcat-menu-deploy
        ports:
        - containerPort: 8080
        volumeMounts:
        - mountPath: "/opt/tomcat/webapps/ROOT/data"
          name: html
        resources:
          limits:
            cpu: 200m
            memory: 250Mi
          requests:
            cpu: 200m
            memory: 250Mi
        livenessProbe:
          httpGet:
            path: /
            port: 8080
          initialDelaySeconds: 15
          periodSeconds: 20
          timeoutSeconds: 1
          successThreshold: 1
          failureThreshold: 3
      volumes:
        - name: html
          persistentVolumeClaim:
            claimName: pvc-tomcat
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: tomcat-mypage
  annotations:
    kubernetes.io/change-cause: first_version
spec:
  replicas: 2
  selector:
    matchLabels:
      app: tomcat
      name: mypage
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxSurge: 25%
      maxUnavailable: 25%
  template:
    metadata:
      labels:
        app: tomcat
        name: mypage
    spec:
      topologySpreadConstraints:
        - maxSkew: 1
          topologyKey: kubernetes.io/hostname
          whenUnsatisfiable: ScheduleAnyway
          labelSelector:
            matchLabels:
              app: tomcat
      containers:
      - image: chae45/tomcat-mypage:v1.0
        name: tomcat-mypage-deploy
        ports:
        - containerPort: 8080
        volumeMounts:
        - mountPath: "/opt/tomcat/webapps/ROOT/data"
          name: html
        resources:
          limits:
            cpu: 200m
            memory: 250Mi
          requests:
            cpu: 200m
            memory: 250Mi
        livenessProbe:
          httpGet:
            path: /
            port: 8080
          initialDelaySeconds: 15
          periodSeconds: 20
          timeoutSeconds: 1
          successThreshold: 1
          failureThreshold: 3
      volumes:
        - name: html
          persistentVolumeClaim:
            claimName: pvc-tomcat
